--- a/frontend/src/css/Options.css
+++ b/frontend/src/css/Options.css
@@ -6,7 +6,7 @@
   }
   
   .options {
-
+    max-width: 50vw;
   }
   
   .optionTitle {
@@ -53,6 +53,23 @@
     position: absolute;
     background-image: linear-gradient(to top, rgba(200, 200, 200, 0), rgba(255, 255,255, 1));
     pointer-events: none;
+  }
+
+  .excelHeader{
+    width: 100%;
+    display: flex;
+  }
+
+.spreadSheetContainer{
+  max-width: 50vw;
+}
+
+  .excelHeaderText{
+    width: 50%;
+    text-align: center;
+    font-size: 25px;
+    font-weight: bolder;
+    border-bottom: 2px solid black;
   }
 
   .revenue{
