--- a/frontend/src/css/Subscribe.css
+++ b/frontend/src/css/Subscribe.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   min-height: 500px;
-  width: 50vw;
+  max-width: 50vw;
 }
 
 .subscribe{
